# KasperskySafeBoard_TestTask

./: .gitignore  CMakeLists.txt  README.md
client/: ScannerClient.cpp  ScannerClient.hpp  client_main.cpp
include/: SharedMemory.cpp  SharedMemory.hpp  SharedTypes.hpp
server/: EchoServer.cpp  EchoServer.hpp  Scanner.cpp  Scanner.hpp  Server.cpp  Server.hpp  main.cpp  patterns.json
tests/: client_tests.cpp  server_tests.cpp  stats_tests.cpp
utility/: StatsClient.cpp  StatsClient.hpp  stats_main.cpp
